--- a/css/slyle.css
+++ b/css/slyle.css
@@ -7,7 +7,7 @@
   --primary-bg-color: #f5f5f5;
   --secondery-bg-color: #f5f4fa;
   --hero-bg-color: #c4c4c4;
-  --main-background-color: #757575;
+  --main-color: #757575;
   --primary-title-color: #212121;
   --style-color: #2196f3;
   --portfolio-gap: 30px;
@@ -40,6 +40,7 @@ ul {
 
 a {
   color: inherit;
+  font-style: normal;
   text-decoration: none;
   cursor: pointer;
 }
@@ -80,6 +81,7 @@ header {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
+  letter-spacing: 0.03em;
 }
 
 .nav-list {
@@ -101,6 +103,8 @@ header {
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.02em;
+  letter-spacing: 0.02em;
+  color: var(--primary-title-color);
 }
 
 .nav-link:hover,
@@ -114,19 +118,34 @@ header {
 
 .contact-list {
   display: flex;
-  gap: 50px;
   margin-left: auto;
+}
+
+.contact-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.contact-item{
+  align-items: center;
 }
 
 .contact-link {
   display: inline-flex;
+  font-weight: 500;
   align-items: center;
   font-size: 14px;
-  line-height: 1.7;
+  line-height: 1.14;
   color: var(--main-color);
 }
 
-.contact-link::before {
+.contact-icon{
+  fill:var(--main-color);
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+}
+
+/* .contact-link::before {
   content: "";
   height: 15px;
   width: 15px;
@@ -141,27 +160,19 @@ header {
 
 .phone::before {
   background-image: url(/images/envelope.svg);
-}
+} */
 
-.email::before:hover,
+/* .email::before:hover,
 .phone::before:hover {
   background-color: var(--style-color);
-}
+} */
 
-.contact-link:hover,
-.contact-link:focus {
+.contact-hover:hover,
+.contact-hover:focus {
   color: var(--style-color);
+  fill:var(--style-color);
 }
 
-.header-email-tel {
-  color: inherit;
-}
-
-.header-email-tel:hover,
-.header-email-tel:focus {
-  color: var(--style-color);
-  font-weight: 500;
-}
 
 /* --------------header--------------- */
 
@@ -219,15 +230,15 @@ header {
   display: flex;
   justify-content: center;
  
+ 
 }
 
 .principles-item {
-  margin-right: 30px;
   align-items: center;
 }
 
-.principles-item:last-child {
-  margin-right: 0;
+.principles-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 /* .principles-item::before{
@@ -292,6 +303,7 @@ background-image: url(/images/principle1.svg);
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
+  color: var(--primary-title-color);
   margin-bottom: 50px;
 }
 
@@ -301,12 +313,8 @@ background-image: url(/images/principle1.svg);
   align-items: center;
 }
 
-.activities-item {
+.activities-item:not(:last-child) {
   margin-right: 50px;
-}
-
-.activities-item:last-child {
-  margin-right: 0;
 }
 /* --------------activities--------------- */
 
@@ -321,6 +329,7 @@ background-image: url(/images/principle1.svg);
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
+  color: var(--primary-title-color);
   margin-bottom: 50px;
 }
 
@@ -356,7 +365,7 @@ background-image: url(/images/principle1.svg);
 }
 
 .team-text {
-  color: var(--main-background-color);
+  color: var(--main-color);
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
@@ -414,6 +423,7 @@ background-image: url(/images/principle1.svg);
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
+  color: var(--primary-title-color);
   margin-bottom: 50px;
 }
 
@@ -471,13 +481,17 @@ background-image: url(/images/principle1.svg);
   padding: 6px 22px;
   border: 0;
   border-radius: 4px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
   text-align: center;
+  letter-spacing: 0.03em;
 }
 
 .filter-btn:hover,
 .filter-btn:focus {
   background-color: var(--style-color);
-  color: #ffffff;
+  color: var(--white-color);
 }
 /* --------------filter--------------- */
 
@@ -514,6 +528,7 @@ background-image: url(/images/principle1.svg);
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
+  letter-spacing: 0.06em;
   color: var(--title-color);
 }
 
@@ -566,10 +581,11 @@ footer {
 }
 
 .adress {
+  font-style: normal;
   color: var(--white-color);
   font-size: 14px;
   line-height: 1.7;
-  font-style: normal;
+
 }
 
 .actions-footer-div {
