--- a/css/slyle.css
+++ b/css/slyle.css
@@ -12,17 +12,10 @@
   --style-color: #2196f3;
   --portfolio-gap: 30px;
   --actions-color: #afb1b8;
+  --portfolio-gap: 30px;
 }
 html {
   box-sizing: border-box;
-}
-
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
 }
 
 body {
@@ -66,14 +59,11 @@ img {
 /* --------------header--------------- */
 header {
   border-bottom: 1px solid #ececec;
-  margin-bottom: 15px;
 }
 .header {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 32px 0;
-  border-bottom: 1px solid #ececec;
 }
 
 .logotype {
@@ -82,12 +72,20 @@ header {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  margin-bottom: 0;
+
+  display: block;
+}
+
+.nav{
+  margin-left: 93px;
 }
 
 .nav-list {
   display: flex;
   justify-content: center;
-  margin-left: 93px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .nav-item {
@@ -101,10 +99,13 @@ header {
 .nav-link {
   font-weight: 500;
   font-size: 14px;
-  line-height: 1.7;
-  letter-spacing: 0.02em;
+  line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primary-title-color);
+
+  display: block;
+
+  padding: 32px 0;
 }
 
 .nav-link:hover,
@@ -119,6 +120,8 @@ header {
 .contact-list {
   display: flex;
   margin-left: auto;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .contact-item:not(:last-child) {
@@ -203,6 +206,10 @@ header {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   margin-bottom: 30px;
+  margin-top: 0;
+  max-width: 700px;
+ margin-left: auto;
+ margin-right: auto;
 }
 
 .hero-btn {
@@ -229,12 +236,13 @@ header {
 .principles-list {
   display: flex;
   justify-content: center;
- 
- 
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .principles-item {
   align-items: center;
+  width: 270px;
 }
 
 .principles-item:not(:last-child) {
@@ -268,13 +276,14 @@ background-image: url(/images/principle1.svg);
 } */
 
 .principles-title {
-  color: var(--title-color);
+  color: var(--primary-title-color);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 10px;
+  margin-top: 0;
 }
 
 .principles-text {
@@ -282,6 +291,8 @@ background-image: url(/images/principle1.svg);
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .principles-icon {
@@ -294,7 +305,7 @@ background-image: url(/images/principle1.svg);
 
 /* --------------activities--------------- */
 .activities {
-  margin-bottom: 100px;
+  padding-top: 0;
 }
 
 .activities-title {
@@ -305,16 +316,20 @@ background-image: url(/images/principle1.svg);
   letter-spacing: 0.03em;
   color: var(--primary-title-color);
   margin-bottom: 50px;
+  margin-top: 0;
 }
 
 .activities-list {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 0;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 
 .activities-item:not(:last-child) {
-  margin-right: 50px;
+  margin-right: 30px;
 }
 /* --------------activities--------------- */
 
@@ -331,6 +346,7 @@ background-image: url(/images/principle1.svg);
   letter-spacing: 0.03em;
   color: var(--primary-title-color);
   margin-bottom: 50px;
+  margin-top: 0;
 }
 
 .team-list {
@@ -340,10 +356,12 @@ background-image: url(/images/principle1.svg);
   flex-wrap: wrap;
   align-content: center;
   align-items: center;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .team-item {
-  margin-right: 50px;
+  margin-right: 30px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -362,6 +380,7 @@ background-image: url(/images/principle1.svg);
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 10px;
+  margin-top: 0;
 }
 
 .team-text {
@@ -370,11 +389,13 @@ background-image: url(/images/principle1.svg);
   line-height: 1.19;
   letter-spacing: 0.03em;
   text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .team-div {
   padding-top: 30px;
-  padding-bottom: 16px;
+  padding-bottom: 30px;
 }
 
 .actions-list {
@@ -464,15 +485,12 @@ background-image: url(/images/principle1.svg);
   justify-content: center;
   margin-right: auto;
   margin-left: auto;
-  margin-bottom: 34px;
+  margin-bottom: 50px;
+  margin-top: 0;
 }
 
-.filter-item {
+.filter-item:not(:last-child) {
   margin-right: 8px;
-}
-
-.filter-item:last-child {
-  margin-right: 0;
 }
 
 .filter-btn {
@@ -496,16 +514,10 @@ background-image: url(/images/principle1.svg);
 /* --------------filter--------------- */
 
 /* ------------  portfolio  ------------ */
-.portfolio {
-  padding: 94px 0;
-}
 
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  /* justify-content: center; */
-  /* align-items: center; */
-
   margin-top: calc(-1 * var(--portfolio-gap));
   margin-left: -30px;
 }
@@ -529,7 +541,9 @@ background-image: url(/images/principle1.svg);
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  color: var(--title-color);
+  color: var(--primary-title-color);
+  margin-top: 0;
+  margin-bottom: 4px;
 }
 
 .portfolio-text {
@@ -537,10 +551,15 @@ background-image: url(/images/principle1.svg);
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .portfolio-content {
   padding: 20px 24px;
+  border-bottom: 1px solid #EEEEEE;
+  border-left: 1px solid #EEEEEE;
+  border-right: 1px solid #EEEEEE;
 }
 /* ------------  portfolio  ------------ */
 
@@ -550,6 +569,10 @@ footer {
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+footer  .logotype{
+  margin-bottom: 20px;
 }
 
 .footer-div {
@@ -573,6 +596,7 @@ footer {
   color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
   line-height: 1.7;
+  margin-top: 9px;
 }
 
 .email-tel:hover,
@@ -581,10 +605,12 @@ footer {
 }
 
 .adress {
+  display: block;
   font-style: normal;
   color: var(--white-color);
   font-size: 14px;
   line-height: 1.7;
+  letter-spacing: 0.03em;
 
 }
 
@@ -620,7 +646,6 @@ footer {
 .sociallinks-item:focus{
   background-color: var(--style-color); 
 }
-
 
 .sociallinks-icon {
   height: 44px;
