--- a/css/slyle.css
+++ b/css/slyle.css
@@ -192,7 +192,7 @@ header {
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(/images/hero.jpg);
+    url(../images/hero.jpg);
   padding-top: 200px;
   padding-bottom: 200px;
 }
