--- a/css/slyle.css
+++ b/css/slyle.css
@@ -142,7 +142,7 @@ header {
 }
 
 .contact-icon{
-  fill:currentColor;
+fill:currentColor;  /* берет от предка текущий цвет текста  */
   width: 16px;
   height: 16px;
   margin-right: 10px;
@@ -367,6 +367,7 @@ background-image: url(/images/principle1.svg);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  width: 270px;
 }
 
 .team-item:last-child {
@@ -415,6 +416,8 @@ background-image: url(/images/principle1.svg);
   display: block;
   background-color: #fff;
   border-radius: 50%;
+  width: 44px;
+  height: 44px;
 }
 
 .actions-link:hover {
@@ -424,7 +427,6 @@ background-image: url(/images/principle1.svg);
 .actions-icon {
   width: 44px;
   height: 44px;
-  /* fill:var(--actions-color); */
   fill: var(--actions-color);
 }
 
@@ -528,7 +530,6 @@ background-image: url(/images/principle1.svg);
   margin-left: var(--portfolio-gap);
   margin-top: var(--portfolio-gap);
   background: #ffffff;
-  border-bottom: 1px solid #eeeeee;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -631,6 +632,8 @@ footer  .logotype{
 .sociallinks-list {
   display: flex;
   align-items: center;
+  width: 44px;
+  height: 44px;
 }
 
 .sociallinks-item:not(:last-child) {
