--- a/css/slyle.css
+++ b/css/slyle.css
@@ -442,7 +442,8 @@ background-image: url(/images/principle1.svg);
   background-color:var(--style-color);
 }
 
-.actions-link:hover .actions-icon {
+.actions-link:hover .actions-icon ,
+.actions-link:focus .actions-icon {
 fill: var(--white-color);
     
 }
@@ -454,11 +455,7 @@ fill: var(--white-color);
   fill: var(--actions-color);
 }
 
-.actions-icon:hover
-{
-  fill:#fff; 
-  
-}
+
 
 .actions-icon:focus
 {
@@ -470,8 +467,7 @@ fill: var(--white-color);
 
 /* --------------  clients  --------------- */
 
-.clients {
-}
+
 
 .clients-title {
   font-weight: 700;
@@ -532,9 +528,7 @@ fill: var(--white-color);
   height: 60px;
 }
 
-.client-icon:hover {
-  fill: var(--style-color);
-}
+
 
 /* --------------  clients  --------------- */
 
@@ -569,7 +563,7 @@ fill: var(--white-color);
 .filter-btn:focus {
   background-color: var(--style-color);
   color: var(--white-color);
-  box-shadow: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  box-shadow: drop-shadow(0px 2px 2px 0px rgba(0, 0, 0, 0.12));
 }
 /* --------------filter--------------- */
 
@@ -600,7 +594,7 @@ fill: var(--white-color);
 
 .portfolio-link:hover, 
 .portfolio-link:focus{
-  box-shadow: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  box-shadow: drop-shadow(0px 2px 2px 0px rgba(0, 0, 0, 0.12));
 }
 
 .portfolio-title {
